New in SVN (will be 0.12)
-------------------------

* New --config option
* Fix for Issue 200 (position of frames was miscalculated)
* Fix For Issue 188 (uniconvertor "'unicode' object has no attribute 'readline'" error)
* New raw directive command: SetPageCounter. This enables
  page counter manipulation, and use of different styles,
  roman, lowerroman, alpha, loweralpha and arabic.
* New raw directive commands: EvenPageBreak and OddPageBreak
* New option to make sections break to odd or even pages:
  --break-side=VALUE
* New option to add an empty page at the beginning of the
  document: --blank-first-page.
* Fixed bug in authors field width calculation
* Support % in bullet and field lists column widths
* Use bullet_list or item_list styles for bullet and item lists respectively.
* Support % in field list column width description.
* Fix for Issue 184 (font metrics go crazy with TT font)
* New admonition code based on SplitTable (beta quality)
* Fix for Issue 180 (support for very very long list items. Needs testing)
* Fix for Issue 175 (widow/orphan titles)
* Fix for Issue 174 (line blocks didn't respect indentation)
* Worked around Issue 173 (quotes didn't indent inside table cells)
* Respect spaceBefore and spaceAfter for footnotes/endnotes
* Added tests for (almost) all of sphinx's custom markup
* Fixed Issue 170 (Wrong font embedding)
* Fixed Issue 171 (Damaged xref table)
* Fixed Issue 159 (Admonition and table widths were miscalculated)
* Fixed Issue 162 (wrong highlighting using sphinx)
* Changed default language policy as described in Issue 53
* Fixed Issue 148 (Images should be looked for relative to source document)
* Fixed Issue 158 (Some admonitions crashed pdfbuilder)
* Fixed Issue 154 (incompatibility with RL 2.1)
* Fixed Issue 155 (crash when sidebars split in a certain way)
* Fixed issue 152 (padding and alignment of table styles, like 
  when using literal blocks inside lists)
* Integrated pdfbuilder sphinx extension (more work needed)